--- a/about.html
+++ b/about.html
@@ -28,9 +28,9 @@
     <section class="aboutmepara">
         <p>Tom Martin is an enthusiastic, positive, and passionate person who enjoys communicating and working on common goals with likeminded people. He has an eye for detail, is a logical thinker and a hard worker. With a bachelor degree in marketing and a diploma in visual design, he now plans to use his current skillset, along with his recent education and experience in full stack web development, to embark on a new career path.</p>
 
-        <p>Whatever it is that Tom puts his mind to he achieves, because he is hard working and does not give up. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. This is evident in his music production journey, where he struggled grasping the basics for the first couple of years because he had limited technological experience. Now, a decade later, he has released vinyl records on record labels from all over the world and has collaborated with some of his biggest creative inspirations. These achievements have provided Tom with some fantastic opportunities, including playing sold-out shows around Australia.</p>  
+        <p>Whatever it is that Tom puts his mind to he achieves, because he is hard working and does not give up. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. This is evident in his music production journey, where he struggled grasping the basics for the first couple of years because he had limited technological experience. Now, a decade later, he has released vinyl records on record labels from around the world and has collaborated with some of his biggest creative inspirations. These achievements have provided Tom with some fantastic opportunities, including playing sold-out shows around Australia.</p>  
         
-        <p>Tom is now wanting to put this same passion and commitment into a career where he can grow professionally, while developing new innovative technologies that benefit humanity and the earth.</p> 
+        <p>Tom is now wanting to turn this same passion and commitment into a career where he can grow professionally, while developing new innovative technologies that benefit humanity and the earth.</p> 
     </p>
     </section>
     </main>
