--- a/projects.html
+++ b/projects.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Tom Martin Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Anek+Bangla:wght@100..800&family=Exo+2:ital,wght@0,100..900;1,100..900&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
@@ -16,12 +16,12 @@
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a class="link" href="/index.html">Home</a>
-        <a class="link" href="/about.html">About</a>
-        <a class="link" href="/skills.html">Skills</a>
-        <a class="link" style="color: #7A75FF" href="/projects.html">Projects</a>
-        <a class="link" href="/blog.html">Blog</a>
-        <a class="link" href="/contact.html">Contact</a>
+        <a class="link" href="index.html">Home</a>
+        <a class="link" href="about.html">About</a>
+        <a class="link" href="skills.html">Skills</a>
+        <a class="link" style="color: #7A75FF" href="projects.html">Projects</a>
+        <a class="link" href="blog.html">Blog</a>
+        <a class="link" href="contact.html">Contact</a>
     </nav>
     </header> 
     <main>
@@ -30,10 +30,10 @@
         <section class="projectslayout">
             <section class="projects">
                 <h2>Portfolio Website</h2>
-                <img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%">
+                <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
                 <p>Create a portfolio website using only vanilla HTML and CSS with no frameworks.</p>
                 <p>Grade: </p>
-                <a class="button" href="musicproduction.html">View Website</a>
+                <a class="button" href="https://tommartinportfolio.netlify.app/">View Website</a>
             </section>
             <section class="projects">
                 <h2>Terminal Application</h2>
