--- a/blog.html
+++ b/blog.html
@@ -52,7 +52,7 @@
                 <!-- Since I can remember, different modes of design have always been a prominent part of my life. Put simply, I love it. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - with a strong fascination on sneaker design, and my year 12 final design piece. Since I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more. -->
             </p>
             <p><em>Published 21th March '24</em></p>
-            <a class="button" href="recordlabel.html">Read More</a>
+            <a class="button" href="design.html">Read More</a>
         </Section>
         <Section class="blogsection">
             <h3>Gardening</h3>
