--- a/design.html
+++ b/design.html
@@ -34,7 +34,7 @@
         <img class="lazydays" src="images/LAZYDAYSBOX1-01.png" alt="Tom in the garden with his mum" width="20%">
         <p class="description"><em>Mock branding design.</em></p>
     <section class="aboutmepara">
-        <p>Design has always been a big part of my life - starting when I was a child and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - consisting of my year 12 final sneaker design project and favourite subject. Since then I have been regulary working with different designers on collaborative projects such as event posters, record designs, clothing and more. 
+        <p>Design has always been a big part of my life - starting when I was a child and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - including my year 12 final sneaker design project and favourite subject. Since then I have been regulary working with different designers on collaborative projects such as event posters, record designs, clothing and more. 
         </p>
             <p>As Covid hit, and I moved back to my hometown of Adeliade, it was time to learn the tools needed to turn my own creative ideas into fruition. This was achieved by studying an intensive design foundations course at The Graphic Design School in Sydney, then a Diploma of Visual Design at The Adelaide College of the Arts. 
             </p>
