--- a/recordlabel.html
+++ b/recordlabel.html
@@ -26,7 +26,7 @@
     <main>
         <h1 class="navheading">Record Label</h1>
         <section class="aboutmepara">
-            <p>After producing music for several years, a desire to be in control of the creative process from start to finish was realised. This led to starting my own record label, with the help of two europe based distrobution companies, which has now seen the label release vinyl records by local and international artists, that are stocked all over the world.</p>
+            <p>After producing music for several years, a desire to be in control of the creative process from start to finish was realised. This led to starting my own record label, with the help of two europe based distrobution companies, which has now seen the label release vinyl records by a handfull of favourite local and international artists.</p>
         </section>
         <section class="musicimages">
             <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="" width="25%">
