--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
             <section class="projects">
                 <h2>Portfolio Website</h2>
                 <a href="https://tommartinportfolio.netlify.app/"><img class="projectimg" src="images/Screenshot 2024-03-20 at 8.21.57 pm.png" alt="picture of Tom's portfolio website home page" width="70%"></a>
-                <p>Create a portfolio website from scratch using only vanilla HTML and CSS with no frameworks.</p>
+                <p>Build a portfolio website from scratch using only vanilla HTML and CSS with no frameworks.</p>
                 <p>Grade: </p>
                 <a class="button" href="https://tommartinportfolio.netlify.app/">View Website</a>
             </section>
