--- a/gardening.html
+++ b/gardening.html
@@ -27,7 +27,7 @@
         <h1 class="navheading">Gardening</h1>
         <img class="blogimages" src="images/8DF8FE52-9FCD-4E09-AE97-1248414DCAB3.JPG" alt="Tom in the garden with his mum">
     <section class="aboutmepara">
-        <p>A love of gardening was inlfuenced by my mother at an early age, whilst growing up in the Adelaide Hills, where I always had a vegetable garden. This has developed into a passion for Australian native varieties and organically grown fruit and vegetables, contributing to a sustainabile future.</p>
+        <p>A love of gardening was influenced by my mother at an early age while growing up in the Adelaide Hills, where I always had my own vegetable garden. This has developed into a passion for Australian natives and organically grown fruit and vegetables - contributing to sustainability.</p>
 
         <a class="button" href="blog.html">Return to blog</a> 
         
