changed for android

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header> 
     <main>
         <img src="images/1517064539613.jpeg" alt="photo picture of Thomas Martin">
-        <p><em>Hi, I'm...</em></p>
+        <p class="hi"><em>Hi, I'm...</em></p>
         <h1>Tom Martin.</h1>
         <p><em>An aspiring full stack developer and designer living in Adelaide, Australia.</em></p>
     <div class="examplebutton">
