--- a/projects.html
+++ b/projects.html
@@ -37,7 +37,7 @@
             <section class="projects">
                 <h2>Terminal Application</h2>
                 <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.21.11 am.png" alt="picture of terminal with python logo" width= "70%">
-                <p>Build a terminal application using Python.</p>
+                <p>Build a terminal application using Python and Flask.</p>
                 <a class="button">COMING SOON</a>
             </section>
             <section class="projects">
