--- a/about.html
+++ b/about.html
@@ -27,7 +27,7 @@
         <h1 class="navheading">About Me</h1>
     <section class="aboutmepara">
         <p>Tom Martin is an enthusiastic, positive, and passionate person who enjoys communicating and working on common goals with likeminded people. He has an eye for detail, is a logical thinker and a hard worker. With a bachelor degree in marketing and a diploma in visual design, he now plans to use his current skillset, along with his recent education and experience in full stack web development, to embark on a new career path.</p>
-        <p>Whatever it is that Tom puts his mind to he achieves, because he is hard working and refuses to give up. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. Tom is now looking to turn this passion and commitment into a career where he can grow professionally, while developing new innovative applications with a focus on benefiting humanity and the earth.</p>  
+        <p>Whatever it is that Tom puts his mind to he achieves, because he is hard working and refuses to give up. He is highly self motivated and is prepared to do whatever it takes to achieve his goals. Tom is now looking to turn this passion and commitment into a career where he can grow professionally, while developing new innovative applications with a focus on benefiting humanity, creativity and the earth.</p>  
     </section>
     </main>
     <footer id="footer">
