replaced id for nav styling instead of inline

--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         <a class="link" href="skills.html">Skills</a>
         <a class="link" href="projects.html">Projects</a>
         <a class="link" href="blog.html">Blog</a>
-        <a class="link" style="color:#7A75FF" href="contact.html">Contact</a>
+        <a class="link" id="selectednav" href="contact.html">Contact</a>
     </nav>
     </header> 
     <main>
