--- a/skills.html
+++ b/skills.html
@@ -17,7 +17,7 @@
     <nav>
         <a class="link" href="index.html">Home</a>
         <a class="link" href="about.html">About</a>
-        <a class="link" style="color:#7A75FF" href="skills.html">Skills</a>
+        <a class="link" id="selectednav" href="skills.html">Skills</a>
         <a class="link" href="projects.html">Projects</a>
         <a class="link" href="blog.html">Blog</a>
         <a class="link" href="contact.html">Contact</a>
