--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <!-- <h1>Portfolio</h1> -->
     <nav>
         <a class="link" href="index.html">Home</a>
-        <a class="link" style="color:#7A75FF" href="about.html">About</a>
+        <a class="link" id="selectednav" href="about.html">About</a>
         <a class="link" href="skills.html">Skills</a>
         <a class="link" href="projects.html">Projects</a>
         <a class="link" href="blog.html">Blog</a>
