--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
     <!-- <h1>Portfolio</h1> -->
     <nav>
-        <a class="link" style="color:#7A75FF" href="index.html">Home</a>
+        <a class="link" id="selectednav" href="index.html">Home</a>
         <a class="link" href="about.html">About</a>
         <a class="link" href="skills.html">Skills</a>
         <a class="link" href="projects.html">Projects</a>
