--- a/musicproduction.html
+++ b/musicproduction.html
@@ -19,7 +19,7 @@
         <a class="link" href="about.html">About</a>
         <a class="link" href="skills.html">Skills</a>
         <a class="link" href="projects.html">Projects</a>
-        <a class="link" style="color:#7A75FF" href="blog.html">Blog</a>
+        <a class="link" id="selectednav" href="blog.html">Blog</a>
         <a class="link" href="contact.html">Contact</a>
     </nav>
     </header> 
