--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     </header> 
     <main>
         <h1 class="navheading">Contact</h1>
-        <p class="lookingforward">Looking forward to hearing from you!</p>
+        
         <address>
             <a class="button" href="mailto: thomas.h.martin89@gmail.com">Let's Connect</a>
         </address>
@@ -33,6 +33,7 @@
             <p>Brompton, Adelaide</p>
             <p>thomas.h.martin89@gmail.com</p>
         </section>
+        <p class="lookingforward"><strong>Looking forward to hearing from you!</strong></p>
         <p class="acknowledgement"><em>I acknowledge the Kaurna people, the original custodians of the lands on which this website was built, and that sovereignty was never ceded.</em></p>
         <div class="contactlogo">
             <a href="https://www.linkedin.com/in/tom-martin-9b24a4103/" target="blank"><img class="linkedin" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="linked in logo"></a>
