changed Thomas to Tom

--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
             <a class="button" href="mailto: thomas.h.martin89@gmail.com">Let's Connect</a>
         </address>
         <section class="contact">
-            <p>Thomas Martin</p>
+            <p>Tom Martin</p>
             <p>Brompton, Adelaide</p>
             <p>thomas.h.martin89@gmail.com</p>
         </section>
