--- a/contact.html
+++ b/contact.html
@@ -33,7 +33,7 @@
             <p>Brompton, Adelaide</p>
             <p>thomas.h.martin89@gmail.com</p>
         </section>
-        <p class="lookingforward"><strong>Looking forward to hearing from you!</strong></p>
+        <!-- <p class="lookingforward"><strong>Looking forward to hearing from you!</strong></p> -->
         <p class="acknowledgement"><em>I acknowledge the Kaurna people, the original custodians of the lands on which this website was built, and that sovereignty was never ceded.</em></p>
         <div class="contactlogo">
             <a href="https://www.linkedin.com/in/tom-martin-9b24a4103/" target="blank"><img class="linkedin" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="linked in logo"></a>
