changed branding to logo

--- a/design.html
+++ b/design.html
@@ -32,7 +32,7 @@
         <img class="designcan" src="images/MJGuavacan-01.png" alt="Tom in the garden with his mum" width="20%">
         <p class="description"><em>Mock logo and product design</em></p>
         <img class="lazydays" src="images/LAZYDAYSBOX1-01.png" alt="Tom in the garden with his mum" width="20%">
-        <p class="description"><em>Mock branding design</em></p>
+        <p class="description"><em>Mock logo design</em></p>
     <section class="aboutmepara">
         <p>Design has always been a big part of my life - starting when I was a child and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - including my year 12 final sneaker design project and favourite subject. Since then I have been regulary working with different designers on collaborative projects such as event posters, record designs, clothing and more. 
         </p>
