--- a/musicproduction.html
+++ b/musicproduction.html
@@ -26,7 +26,7 @@
     <main>
         <h1 class="navheading">Music Production</h1>
         <section class="aboutmepara">
-            <p>From an early age, a strong love of most genres of music paved the way for over a decade long music production journey. During this time, I was fortunate enough to collaborate with some life-long inspirations and release music on a variety of my favourite local and international record labels.</p>
+            <p>From an early age, a strong love of most genres of music paved the way for over a decade long music production journey. During this time, I was fortunate enough to collaborate with some of my biggest inspirations and release music on a variety of my favourite local and international record labels.</p>
         </section>
         <section class="musicimages">
             <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="" width="25%">
