--- a/contact.html
+++ b/contact.html
@@ -26,7 +26,7 @@
         <h1 class="navheading">Contact</h1>
         
         <address>
-            <a class="button" href="mailto: thomas.h.martin89@gmail.com">Let's Connect</a>
+            <a class="button" href="mailto: thomas.h.martin89@gmail.com">Get in Touch</a>
         </address>
         <section class="contact">
             <p>Tom Martin</p>
