added alts to all images

--- a/blog.html
+++ b/blog.html
@@ -36,7 +36,7 @@
         </Section>
         <Section class="blogsection">
             <h3>Record Label</h3>
-            <a href="recordlabel.html"><img class="blogimg" src="images/MD.jpeg" alt="Picture of Ahora Si cover" width="100dvw"></a>
+            <a href="recordlabel.html"><img class="blogimg" src="images/MD.jpeg" alt="Picture of Mind Dance logo" width="100dvw"></a>
             <p>
             <!-- After producing music for seven years, a desire to be in control of the creative process from start to finish was realised. This led to starting my own record label. With the help of two europe based distrobution companies, the label has now released ten vinyl records by local and international artists and is stocked all over the world.    -->
             </p>
@@ -45,7 +45,7 @@
         </Section>
         <Section class="blogsection">
             <h3>Design</h3>
-            <a href="design.html"><img class="blogimg" src="images/5847e949cef1014c0b5e4820.png" alt="Picture of Ahora Si cover" width="100dvw"></a>
+            <a href="design.html"><img class="blogimg" src="images/5847e949cef1014c0b5e4820.png" alt="Picture of Adobe logo" width="100dvw"></a>
             <p>
                 <!-- Since I can remember, different modes of design have always been a prominent part of my life. Put simply, I love it. It started when I was a child, and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - with a strong fascination on sneaker design, and my year 12 final design piece. Since I have been working with many different designers regularly on projects such as event posters, record designs, clothing and more. -->
             </p>
@@ -54,7 +54,7 @@
         </Section>
         <Section class="blogsection">
             <h3>Gardening</h3>
-            <a href="gardening.html"><img class="blogimg" src="images/vecteezy_green-leaf-logo_6954129.jpg" alt="Picture of Ahora Si cover" width="100dvw"></a>
+            <a href="gardening.html"><img class="blogimg" src="images/vecteezy_green-leaf-logo_6954129.jpg" alt="Picture of Tom and his mother gardening" width="100dvw"></a>
             <p>
             <!-- A love of gardening was inlfuenced by my mother at an early age, whilst growing up in the Adelaide Hills, where I always had a vegetable garden. This has developed into a passion for Australian native varieties and organically grown fruit and vegetables, contributing to sustainability.  -->
             </p>
@@ -63,7 +63,7 @@
         </Section>
         <Section class="blogsection">
             <h3>Cooking</h3>
-            <a href="cooking.html"><img class="blogimg" src="images/vecteezy_chef-logo-with-hat-vector-design_7497962.jpg" alt="Picture of Ahora Si cover" width="100dvw"></a>
+            <a href="cooking.html"><img class="blogimg" src="images/vecteezy_chef-logo-with-hat-vector-design_7497962.jpg" alt="Picture of a green curry" width="100dvw"></a>
             <p>
                 <!-- Since Covid struck, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes. Initially, I look for what produce in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingredients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some excellent recipes, that I will definitely be making next season!     -->
             </p>
