--- a/cooking.html
+++ b/cooking.html
@@ -24,7 +24,7 @@
     </header> 
     <main>
         <h1 class="navheading">Cooking</h1>
-        <img class="blogimages" src="images/Screenshot 2024-03-23 at 12.42.48 pm.png" alt="picture of Thai curry">
+        <img class="blogimages" src="images/Screenshot 2024-03-23 at 12.42.48 pm.png" alt="picture of Thai green curry">
     <section class="aboutmepara">
         <p>Since Covid, my skills in the kitchen have definitely improved, and so has my enjoyment and passion for finding new recipes that include home grown produce. Initially, I look for what in the garden is ready to consume, then jump on the computer to find recipes that include as many of the ingredients as possible. This is a fantastic way to save money, discover new recipes and avoid food wastage. Using this method I have stumbled across some excellent new recipes - that I look forward to making next season!</p>
         <a class="button" href="blog.html">Return to blog</a> 
