--- a/design.html
+++ b/design.html
@@ -24,12 +24,12 @@
     </header> 
     <main>
         <h1 class="navheading">Design</h1>
-        <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Tom in the garden with his mum" width="30%">
-        <img class="designimages" src="images/BerlinAntonalmock1-01.png" alt="Tom in the garden with his mum" width="30%">
+        <img class="designimages" src="images/BerlinAntonalmock2-02.png" alt="Picture of Berlin Atonal mock design picture 1" width="30%">
+        <img class="designimages" src="images/BerlinAntonalmock1-01.png" alt="Picture Berlin Atonal mock design picture 2" width="30%">
         <p class="description"><em>Mock event poster design</em></p>
-        <img class="designcan" src="images/MJGuavacan-01.png" alt="Tom in the garden with his mum" width="20%">
+        <img class="designcan" src="images/MJGuavacan-01.png" alt="Picture of Moon Juice beer mock can design" width="20%">
         <p class="description"><em>Mock logo and product design</em></p>
-        <img class="lazydays" src="images/LAZYDAYSBOX1-01.png" alt="Tom in the garden with his mum" width="20%">
+        <img class="lazydays" src="images/LAZYDAYSBOX1-01.png" alt="Pixture of Lazy Days winery mock logo" width="20%">
         <p class="description"><em>Mock logo design</em></p>
     <section class="aboutmepara">
         <p>Design has always been a big part of my life - starting when I was a child and my dream job was to be an architect, making Lego and cardboard box arcades and hotels for fun. This was succeeded by product and furniture design - including my year 12 final sneaker design project and favourite subject. Since then I have been regulary working with different designers on collaborative projects such as event posters, record designs, clothing and more. 
