--- a/musicproduction.html
+++ b/musicproduction.html
@@ -28,18 +28,18 @@
             <p>From an early age, a strong love of most genres of music paved the way for over a decade long music production journey. During this time, I was fortunate enough to collaborate with some of my biggest inspirations and release music on a variety of my favourite local and international record labels.</p>
         </section>
         <section class="musicimages">
-            <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="" width="25%">
-            <img class="musicimage" src="images/RozaFranksplit.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/FFwavepoolcoverart.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/FFVVart.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/FFtrip2fantasy.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/Ahora art.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/FFDOLart.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/FFMMcover.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/SAcoverart.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/FFIPcover.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/COXXXcover.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/DJDoggFFvol1.jpeg" alt="" width="25%">
+            <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="Picture of Volume 3 record" width="25%">
+            <img class="musicimage" src="images/RozaFranksplit.jpeg" alt="Picture of Paper-Cuts record" width="25%">
+            <img class="musicimage" src="images/FFwavepoolcoverart.jpeg" alt="Picture of Wavepool record" width="25%">
+            <img class="musicimage" src="images/FFVVart.jpeg" alt="Picture of Venom Viper record" width="25%">
+            <img class="musicimage" src="images/FFtrip2fantasy.jpeg" alt="Picture of Trip 2 Fantasy record" width="25%">
+            <img class="musicimage" src="images/Ahora art.jpeg" alt="Picture of Ahora Si record" width="25%">
+            <img class="musicimage" src="images/FFDOLart.jpeg" alt="Picture of Dream of Love record" width="25%">
+            <img class="musicimage" src="images/FFMMcover.jpeg" alt="Picture of Magic Mountain record" width="25%">
+            <img class="musicimage" src="images/SAcoverart.jpeg" alt="Picture of Sunflower Aquarium record" width="25%">
+            <img class="musicimage" src="images/FFIPcover.jpeg" alt="Picture of Infinity Pool record" width="25%">
+            <img class="musicimage" src="images/COXXXcover.jpeg" alt="Picture of Current Obsession record" width="25%">
+            <img class="musicimage" src="images/DJDoggFFvol1.jpeg" alt="Picture of volume 1 record" width="25%">
         </section>
     <section>
         <a id="returntoblog" class="button" href="blog.html">Return to blog</a>
