--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@
             </section>
             <section class="projects">
                 <h2>SQL Databases</h2>
-                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picutre of a database" width="70%">
+                <img class="projectimg" src="images/Screenshot 2024-03-21 at 10.37.34 am.png" alt="picture of a database" width="70%">
                 <p>Build an SQL database system.</p>
                 <a class="button">COMING SOON</a>
             </section>
