--- a/recordlabel.html
+++ b/recordlabel.html
@@ -28,15 +28,15 @@
             <p>After producing music for several years, a desire to be in control of the creative process from start to finish was realised. This led to starting my own record label, with the help of two europe based distrobution companies, which has now seen the label release vinyl records by a handfull of favourite local and international artists.</p>
         </section>
         <section class="musicimages">
-            <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="" width="25%">
-            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.32.14 pm.png" alt="" width="25%">
-            <img class="musicimage" src="images/FFwavepoolcoverart.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/FFVVart.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.32.44 pm.png" alt="" width="25%">
-            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.33.10 pm.png" alt="" width="25%">
-            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.34.12 pm.png" alt="" width="25%">
-            <img class="musicimage" src="images/FFIPcover.jpeg" alt="" width="25%">
-            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.38.12 pm.png" alt="" width="25%">
+            <img class="musicimage" src="images/CS992872-01A-BIG.jpg" alt="picture of vol 3 record" width="25%">
+            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.32.14 pm.png" alt="picture of Sj Tequilla - GG Allien record" width="25%">
+            <img class="musicimage" src="images/FFwavepoolcoverart.jpeg" alt="picture of Wavepool record" width="25%">
+            <img class="musicimage" src="images/FFVVart.jpeg" alt="picture of Venom Viper record" width="25%">
+            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.32.44 pm.png" alt="picture of Mystic Minds vol 2 record" width="25%">
+            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.33.10 pm.png" alt="picture of Andy Rantzen - Return to the Source record" width="25%">
+            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.34.12 pm.png" alt="picture of Mystic Minds vol 1 record" width="25%">
+            <img class="musicimage" src="images/FFIPcover.jpeg" alt="picture of Infinity Pool record" width="25%">
+            <img class="musicimage" src="images/Screenshot 2024-03-23 at 12.38.12 pm.png" alt="picture of Vol 2 record" width="25%">
         </section>
     <section>
         <a id="returntoblog" class="button" href="blog.html">Return to blog</a>
