removed ! from home page

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h1>Tom Martin.</h1>
         <p><em>An aspiring full stack developer and designer living in Adelaide, Australia.</em></p>
     <div class="examplebutton">
-        <a class="button" href="projects.html">Examples of my work!</a>
+        <a class="button" href="projects.html">Examples of my work</a>
     </div>
     <div class="contactlogo">
         <a href="https://www.linkedin.com/in/tom-martin-9b24a4103/" target="blank"><img class="linkedin" src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="linked in logo"></a>
